# t-pomo

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
t_pomo/: t_pomo.py
test/: inspirational-quotes.py
