[project]
name = "t-pomo"
version = "0.1.0"
description = ""
authors = [
    {name = "uuboyscy",email = "uuboyscy@uuboyscy.dev"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "art (>=6.4,<7.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
