[project]
name = "t-pomo"
version = "0.7.0"
description = "A simple Pomodoro timer with ASCII art display that runs on terminal."
authors = [
    {name = "uuboyscy",email = "uuboyscy@uuboyscy.dev"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "art (>=6.4,<7.0)",
    "inspirational-quotes (>=0.0.16,<0.0.17)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[project.urls]
Homepage = "https://github.com/uuboyscy/t-pomo"
Issues = "https://github.com/uuboyscy/t-pomo/issues"

[tool.poetry.group.dev.dependencies]
build = "^1.2.2.post1"
twine = "^6.1.0"

[tool.poetry.scripts]
t-pomo = "t_pomo.t_pomo:main"
